# vecDb

./: CMakeLists.txt  README.md
apps/lib/: .gitattributes
src/: FaissIndex.cc  FaissIndex.h  HttpServer.h  IndexFactory.cc  IndexFactory.h  ScalarStorage.cc  ScalarStorage.h  VectorDataBase.cc  VectorDatabase.h  httplib.h
src/base/: httplib.cc
test/: test.cc
